[package]
name = "realm-voyagers"
description = "Created with Anchor"
version = "0.1.0"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "realm_voyagers"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
